# ProductAgents

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  connectors.yaml.example  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
design/: DESIGN.md  contrast.py  design-system-plan.md
design/docs/: antd-pilot-evaluation.md  phase-10a-flow-patterns.md  phase-10b-editing-patterns.md  phase-10c-system-patterns.md  phase-3a-layout.md  phase-3b-navigation.md  phase-3c-forms.md  phase-3d-data-display.md  phase-3e-feedback.md  phase-3f-overlays.md  phase-4a-agents.md  phase-4b-execution.md  phase-4c-llm.md  phase-5a-workflow.md  phase-5b-cli.md  phase-6-project.md  phase-7-settings.md  phase-8-monitoring.md  phase-9-empty-states.md
design/styleguide/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
design/styleguide/public/fonts/: README.md
design/styleguide/src/: AIComponents.tsx  App.tsx  Components.tsx  Foundation.tsx  Tokens.tsx  WorkflowCli.tsx  fonts.css  harness.css  main.tsx  sg.tsx
design/styleguide/src/antd-pilot/: AntdPilotDataDisplay.tsx  AntdPilotForms.tsx  AntdPilotNavigation.tsx  theme.ts  (+2 more)
design/tokens/: components.css  primitives.css  semantic.css
design/tokens/themes/: dark.css  light.css
desktop/: .gitignore  CLAUDE.md  DESIGN.md  PRODUCT.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
desktop/e2e/: CLAUDE.md  bridge.spec.ts  hitl.spec.ts  shell.spec.ts
desktop/packaging/: build-sidecar.sh  ensure-sidecar.sh  productagents-ipc.spec  target-triple.sh
desktop/src/: main.tsx  test-setup.ts
desktop/src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/app/: App.css  App.test.tsx  App.tsx  IpcProvider.tsx  RunContext.test.tsx  RunContext.tsx  Sidebar.css  Sidebar.test.tsx  Sidebar.tsx  TopBar.css  TopBar.test.tsx  TopBar.tsx  topBarView.test.ts  topBarView.ts
desktop/src/ipc/: client.test.ts  client.ts  events.test.ts  events.ts  transport.test.ts  transport.ts  types.ts
desktop/src/panels/: AgentNode.css  AgentNode.test.tsx  AgentNode.tsx  ConnectorConfigForm.test.tsx  ConnectorConfigForm.tsx  ConnectorsPanel.css  ConnectorsPanel.test.tsx  ConnectorsPanel.tsx  DecisionsPanel.test.tsx  DecisionsPanel.tsx  NodePromptDrawer.test.tsx  NodePromptDrawer.tsx  OrgMemoryPanel.test.tsx  OrgMemoryPanel.tsx  PromptsPanel.test.tsx  PromptsPanel.tsx  RawEvents.test.tsx  RawEvents.tsx  ReflectionPanel.test.tsx  ReflectionPanel.tsx  RunPanel.css  RunPanel.test.tsx  RunPanel.tsx  SessionsPanel.test.tsx  SessionsPanel.tsx  SettingsConnectors.test.tsx  SettingsConnectors.tsx  SettingsPanel.css  SettingsPanel.test.tsx  SettingsPanel.tsx  StageTimeline.css  StageTimeline.test.tsx  StageTimeline.tsx  UpdateSection.tsx  WorkflowLegend.css  WorkflowLegend.test.tsx  WorkflowLegend.tsx  WorkflowPalette.css  WorkflowPalette.test.tsx  WorkflowPalette.tsx  (+35 more)
desktop/src/ui/: ConfidenceGauge.css  ConfidenceGauge.test.tsx  ConfidenceGauge.tsx  EmptyState.css  EmptyState.test.tsx  EmptyState.tsx  ThemeControl.test.tsx  ThemeControl.tsx  ThemeShell.test.tsx  ThemeShell.tsx  emptyStateIcons.test.tsx  emptyStateIcons.tsx  fonts.css  theme.test.ts  theme.ts  tokens.css  tokens.test.ts  tokens.ts  useThemePreference.test.tsx  useThemePreference.ts
docs/: RELEASE.md
docs/design/: 2026-06-23-productagents-v2-architecture.md
docs/design/adr/: 0001-uv-workspace-and-layer-boundaries.md
docs/images/: diagram.pen
docs/notes/: v3-concepts.md  v3-notes.txt
docs/superpowers/plans/: 2026-06-19-github-actions-ci.md  2026-06-19-linter-verification.md  2026-06-19-productagents-debate-layer.md  2026-06-19-productagents-risk-layer.md  2026-06-19-productagents-thin-slice.md  2026-06-20-dotenv-config.md  2026-06-20-productagents-human-in-the-loop-governance.md  2026-06-20-productagents-live-evidence-collection.md  2026-06-20-productagents-outcome-injection.md  2026-06-20-productagents-review-hardening.md  2026-06-21-ci-phase-split-and-security.md  2026-06-21-codebase-review-and-harness.md  2026-06-21-first-run-setup-wizard.md  2026-06-21-openrouter-free-models.md  2026-06-21-tui-layout-and-error-surface.md  2026-06-22-codebase-refactor-opportunities.md  2026-06-22-openrouter-resilience-and-degraded-run-handling.md  2026-06-22-tui-state-indicators.md
docs/superpowers/specs/: 2026-06-19-productagents-thin-slice-design.md
scripts/: coverage_floor.py
src/productagents/: CLAUDE.md  config.py  evidence.py  graph.py  llm.py  logging_config.py  memory.py  runner.py  schemas.py  setup.py
src/productagents/agents/: CLAUDE.md  _analyst.py  _format.py  _llm_call.py  _stream.py  business.py  customer_research.py  debate.py  governance.py  human_approval.py  judge.py  market.py  product_analytics.py  reflection.py  risk.py  strategist.py  technical.py
src/productagents/tui/: CLAUDE.md  _format.py  app.py  app.tcss  approval.py  home_screen.py  reflection.py  setup_screen.py
tests/: CLAUDE.md  _ipc_helpers.py  canonical_harness.py  conftest.py  connector_fakes.py  fakes.py  knowledge_fakes.py  memory_fakes.py  storage_fixtures.py  test_agent_context.py  test_alembic_migration.py  test_analyst_helper.py  test_analysts.py  test_app_main.py  test_app_sync_config.py  test_app_sync_health.py  test_app_sync_run.py  test_app_sync_summary.py  test_approval_tui.py  test_bootstrap.py  test_canonical_base.py  test_canonical_harness.py  test_canonical_mapping.py  test_canonical_repository.py  test_canonical_sink.py  test_cli.py  test_cli_config.py  test_cli_connectors.py  test_cli_decisions.py  test_cli_ipc_parity.py  test_cli_memory.py  test_cli_prompts.py  test_cli_workflows.py  test_config.py  test_configuration.py  test_connector_base.py  test_connector_errors.py  test_connector_http.py  test_connector_observability.py  test_connector_public_surface.py  (+122 more)
(+40 files in other folders)
