[project]
name = "productagents"
version = "0.1.0"
description = "Multi-agent platform for product decision-making under uncertainty."
requires-python = ">=3.14"
dependencies = [
    "productagents-core",
    "productagents-connectors",
    "productagents-knowledge",
    "productagents-memory",
    "productagents-agents",
    "productagents-app",
]

[project.scripts]
productagents = "productagents.app.tui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Umbrella has no importable code of its own; ship an empty marker package.
bypass-selection = true

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
productagents-core = { workspace = true }
productagents-connectors = { workspace = true }
productagents-knowledge = { workspace = true }
productagents-memory = { workspace = true }
productagents-agents = { workspace = true }
productagents-app = { workspace = true }

[dependency-groups]
dev = [
    "bandit[toml]>=1.9.4",
    "import-linter>=2.0",
    "pre-commit>=4.6.0",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "ruff>=0.15.18",
    "ty==0.0.51",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=productagents --cov-report=term-missing --cov-report=html --cov-fail-under=90"

[tool.coverage.run]
branch = true
source = ["productagents"]

[tool.coverage.report]
show_missing = true

[tool.bandit]
# Scan only application source in CI (`-r src`); tests legitimately use
# patterns bandit flags (e.g. asserts), so exclude them from any wider scan.
exclude_dirs = ["tests"]

[tool.importlinter]
root_packages = ["productagents"]
include_external_packages = true

# The one-way dependency DAG (higher layers may import lower, never the reverse).
[[tool.importlinter.contracts]]
name = "Layered architecture"
type = "layers"
layers = [
    "productagents.app",
    "productagents.agents",
    "productagents.knowledge | productagents.memory",
    "productagents.core",
]

# Connectors map INTO core only; nothing above imports a connector by name.
[[tool.importlinter.contracts]]
name = "Connectors are isolated below the platform"
type = "forbidden"
source_modules = ["productagents.app", "productagents.agents", "productagents.knowledge"]
forbidden_modules = ["productagents.connectors"]

# pa-core stays dependency-light: no transport, no orchestration, no DB driver.
[[tool.importlinter.contracts]]
name = "Core has no heavy dependencies"
type = "forbidden"
source_modules = ["productagents.core"]
forbidden_modules = ["httpx", "requests", "langchain", "langgraph", "sqlalchemy", "textual"]
include_external_packages = true

# requests is banned platform-wide (async-first, httpx only).
[[tool.importlinter.contracts]]
name = "No requests anywhere"
type = "forbidden"
source_modules = ["productagents"]
forbidden_modules = ["requests"]
include_external_packages = true

[tool.ruff]
line-length = 88
# target-version is inferred from project.requires-python (>=3.14).

[tool.ruff.lint]
# Curated, explicit rule set. The default ruff selection is nearly empty;
# this locks in the rules the codebase was already written against (note the
# existing `# noqa: BLE001` suppressions).
#
# `TC` (flake8-type-checking) is intentionally EXCLUDED: moving Pydantic
# field-type imports into `if TYPE_CHECKING:` blocks breaks Pydantic's
# runtime annotation evaluation (see schemas.py).
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "BLE", # flake8-blind-except (makes the existing `# noqa: BLE001` meaningful)
    "RUF", # ruff-specific rules
    "PT",  # flake8-pytest-style
]
