[project]
name = "productagents"
version = "0.1.0"
description = "Multi-agent platform for product decision-making under uncertainty."
requires-python = ">=3.14"
dependencies = [
    "productagents-core",
    "productagents-connectors",
    "productagents-knowledge",
    "productagents-memory",
    "productagents-agents",
    "productagents-platform",
    "productagents-app",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Umbrella has no importable code of its own; ship an empty marker package.
bypass-selection = true

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
productagents-core = { workspace = true }
productagents-connectors = { workspace = true }
productagents-knowledge = { workspace = true }
productagents-memory = { workspace = true }
productagents-agents = { workspace = true }
productagents-platform = { workspace = true }
productagents-app = { workspace = true }

[dependency-groups]
dev = [
    "bandit[toml]>=1.9.4",
    "import-linter>=2.0",
    "pre-commit>=4.6.0",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "respx>=0.21",
    "ruff>=0.15.18",
    "ty==0.0.51",
]
package = [
    "pyinstaller>=6.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=productagents --cov-report=term-missing --cov-report=html --cov-report=json --cov-fail-under=90"

[tool.coverage.run]
branch = true
source = ["productagents"]

[tool.coverage.paths]
productagents = [
    "packages/pa-core/src/productagents",
    "packages/pa-agents/src/productagents",
    "packages/pa-app/src/productagents",
    "packages/pa-memory/src/productagents",
    "packages/pa-knowledge/src/productagents",
    "packages/pa-connectors/src/productagents",
    "packages/pa-platform/src/productagents",
]

[tool.coverage.report]
show_missing = true
omit = [
    "*/connectors/__init__.py",
]

[tool.bandit]
# Scan only application source in CI (`-r src`); tests legitimately use
# patterns bandit flags (e.g. asserts), so exclude them from any wider scan.
exclude_dirs = ["tests"]

[tool.importlinter]
root_packages = ["productagents"]
include_external_packages = true

# The one-way dependency DAG (higher layers may import lower, never the reverse).
[[tool.importlinter.contracts]]
name = "Layered architecture"
type = "layers"
layers = [
    "productagents.app",
    "productagents.platform",
    "productagents.agents",
    "productagents.knowledge | productagents.memory",
    "productagents.core",
]

# Connectors map INTO core only; only the platform composition root wires them.
# allow_indirect_imports = true so that app → platform.connectors → connectors
# is legal (app goes through the platform, not around it); direct wiring is still
# caught.
[[tool.importlinter.contracts]]
name = "Connectors are isolated below the platform"
type = "forbidden"
source_modules = [
    "productagents.app",
    "productagents.agents",
    "productagents.memory",
    "productagents.core",
    "productagents.knowledge",
]
forbidden_modules = ["productagents.connectors"]
allow_indirect_imports = true

# Connectors depend only on core (+ httpx). Never the storage/agent/app layers.
[[tool.importlinter.contracts]]
name = "Connectors depend only on core"
type = "forbidden"
source_modules = ["productagents.connectors"]
forbidden_modules = [
    "productagents.knowledge",
    "productagents.memory",
    "productagents.agents",
    "productagents.app",
    "sqlalchemy",
    "sqlmodel",
    "langchain",
    "langgraph",
]
include_external_packages = true

# pa-core stays dependency-light: no transport, no orchestration, no DB driver.
[[tool.importlinter.contracts]]
name = "Core has no heavy dependencies"
type = "forbidden"
source_modules = ["productagents.core"]
forbidden_modules = ["httpx", "requests", "langchain", "langgraph", "sqlalchemy", "textual"]
include_external_packages = true

# requests is banned platform-wide (async-first, httpx only).
[[tool.importlinter.contracts]]
name = "No requests anywhere"
type = "forbidden"
source_modules = ["productagents"]
forbidden_modules = ["requests"]
include_external_packages = true

# Presentation depends only on the Application Layer (+ core models).
# allow_indirect_imports = true: app → platform.connectors → connectors is legal
# (app goes through the platform, not around it); direct wiring is still caught.
[[tool.importlinter.contracts]]
name = "Presentation goes through the Application Layer only"
type = "forbidden"
source_modules = ["productagents.app"]
forbidden_modules = [
    "productagents.agents",
    "productagents.memory",
    "productagents.knowledge",
    "productagents.connectors",
    "langgraph",
    "langchain",
    "sqlalchemy",
]
include_external_packages = true
allow_indirect_imports = true

# Agents reach the store only through Knowledge Services, never raw SQL/ORM.
[[tool.importlinter.contracts]]
name = "Agents reach storage only through services"
type = "forbidden"
source_modules = ["productagents.agents"]
forbidden_modules = ["sqlalchemy", "sqlmodel", "aiosqlite", "alembic"]

[tool.ruff]
line-length = 88
# target-version is inferred from project.requires-python (>=3.14).
# Teach ruff where first-party source trees live (src/ was removed in Phase 0).
src = [
    "packages/pa-core/src",
    "packages/pa-agents/src",
    "packages/pa-app/src",
    "packages/pa-memory/src",
    "packages/pa-knowledge/src",
    "packages/pa-connectors/src",
    "packages/pa-platform/src",
]

[tool.ruff.lint]
# Curated, explicit rule set. The default ruff selection is nearly empty;
# this locks in the rules the codebase was already written against (note the
# existing `# noqa: BLE001` suppressions).
#
# `TC` (flake8-type-checking) is intentionally EXCLUDED: moving Pydantic
# field-type imports into `if TYPE_CHECKING:` blocks breaks Pydantic's
# runtime annotation evaluation (see schemas.py).
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "BLE", # flake8-blind-except (makes the existing `# noqa: BLE001` meaningful)
    "RUF", # ruff-specific rules
    "PT",  # flake8-pytest-style
]
